[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/main/fuzzy-circle-256.png" type="Texture" id=1]
[ext_resource path="res://src/main/puzzle/goop-glob.gd" type="Script" id=2]

[node name="GoopGlob" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="FadeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FadeTimer" to="." method="_on_FadeTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
